<resources>
    <string name="app_name">CrimeDB</string>
    <string name="title_hint">Enter a title for the crime.</string>
    <string name="title_label">Title</string>
    <string name="details_label">Details</string>
    <string name="solved_label">Solved</string>
    <string name="crime_solved_image">ImageOfCrimeSolved</string>
    <string name="date_picker_title">Date of Crime : </string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d Crimes</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="choose_suspect_text">Choose Suspect</string>

    <string name="crime_report">%1$s ! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The Case is solved</string>
    <string name="crime_report_unsolved">The Case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CrimeDB crime report</string>
    <string name="send_report">Send report via </string>


</resources>
